<resources>
    <string name="app_name">module_main</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="app_exit_tip">再按一次退出APP</string>
    <!-- 离线登录-->
    <string name="offline_login_input_ip">请输入底盘的ip地址</string>
    <string name="offline_login_input_port">请输入端口号</string>
    <string name="offline_login_connect">连接NuxBot</string>
    <string name="offline_login_hint">提示：请先连接到底盘的无线网络</string>
    <string name="offline_login_connecting">连接中…</string>
    <string name="offline_login_disconnect">已断开连接</string>
    <string name="offline_login_connect_success">底盘连接成功</string>
    <string name="offline_login_connect_fail">连接失败，请检查网络连接</string>

    <!-- 主页面 底部导航栏-->
    <string name="main_function_map">地图</string>
    <string name="main_function_action">动作</string>
    <string name="main_function_edit">编辑</string>
    <string name="main_stop_action">停止</string>
    <string name="main_navigate">导航</string>

    <string name="main_map_operate_clear">清空地图</string>
    <string name="main_map_operate_save">保存地图</string>
    <string name="main_map_operate_relocation">重定位</string>
    <string name="main_map_edit_virtual_wall">虚拟墙</string>
    <string name="main_map_edit_virtual_tracks">虚拟轨道</string>
    <string name="main_map_edit_rubber">橡皮擦</string>

    <!-- 主页面 虚拟墙编辑-->
    <string name="main_virtual_wall_area_delete">区域删除</string>
    <string name="main_virtual_wall_delete">删除</string>
    <string name="main_virtual_wall_steep">直线墙</string>
    <string name="main_virtual_wall_curve">曲线墙</string>

    <string name="main_virtual_tracks_steep">直线轨道</string>
    <string name="main_virtual_tracks_curve">曲线轨道</string>


    <!-- 主页面 橡皮檫-->
    <string name="eraser_color">Color</string>
    <string name="eraser_size">Size</string>
    <string name="Eraser_confirm">Eraser</string>


    <!-- 设备信息 -->
    <string name="robot_info_title">设备信息</string>
    <string name="robot_info_sn">S/N</string>
    <string name="robot_info_firmware">固件版本</string>
    <string name="robot_info_hardware">硬件版本</string>
    <string name="robot_info_system">系统版本</string>
    <string name="robot_info_ip">IP地址</string>
    <string name="robot_info_positioning_quality">定位质量</string>
    <string name="robot_info_battery_power">电池电量</string>
    <string name="robot_info_charge_status">充电状态</string>
    <string name="robot_info_map_size">地图大小</string>
    <string name="robot_info_robot_pose">机器人位姿</string>
    <string name="robot_info_charging_pose">充电桩位姿</string>


    <!-- 设置 -->
    <string name="setting_title">设置</string>
    <string name="setting_slam_ware_title">Slamware设置</string>
    <string name="setting_max_speed">最大运动速度</string>
    <string name="setting_navigate_model">导航模式</string>

    <string name="setting_navigate_free">自由导航</string>
    <string name="setting_navigate_track">轨道导航</string>
    <string name="setting_navigate_track_prior">轨道优先</string>
    <string name="setting_arrive_point_model">到点模式</string>
    <string name="setting_arrive_point_model_common">普通到点</string>
    <string name="setting_arrive_point_model_exact">精确到点</string>
    <string name="setting_pause_continue_map">暂停/继续建图</string>
    <string name="setting_pause_pause_map">暂停建图</string>
    <string name="setting_continue_map">继续建图</string>

    <string name="setting_pause_continue_orientation">暂停/继续定位</string>
    <string name="setting_pause_orientation">暂停定位</string>
    <string name="setting_continue_orientation">继续定位</string>
    <string name="setting_diagnostic_debugging">诊断调试</string>
    <string name="setting_motor_control">运动控制</string>
    <string name="setting_display">显示设置</string>
    <string name="setting_display_radar">雷达显示设置</string>
    <string name="setting_display_virtual_wall">虚拟墙显示设置</string>
    <string name="setting_display_virtual_tracks">虚拟轨道显示设置</string>
    <string name="setting_display_sensor_layer">传感器图层显示设置</string>
    <string name="setting_display_cleaning_layer">清扫图层显示设置</string>
    <string name="setting_display_wcs">坐标系显示设置</string>
    <string name="setting_display_target">目标点显示设置</string>
    <string name="setting_display_waypoint">路径点显示设置</string>


    <!-- 运动控制 -->
    <string name="slam_control_title">运动控制</string>
    <string name="slam_control_go_charge">回桩充电</string>
    <string name="slam_control_cancel_action">取消动作</string>
    <string name="slam_control_forward">向前</string>
    <string name="slam_control_back">向后</string>
    <string name="slam_control_left">左转</string>
    <string name="slam_control_right">右转</string>


    <!-- 地图编辑 -->
    <string name="map_edit_title">地图编辑</string>
    <string name="slam_map_save_title">保存地图</string>
    <string name="slam_map_save_success">地图保存成功</string>
    <string name="slam_map_save_fail">地图保存失败</string>
    <string name="slam_map_save_name_hint">请输入地图名称</string>
    <string name="slam_map_save_level_hint">输入地图所在楼层或区域</string>
    <string name="slam_map_save_name_null">地图名称不能为空哦</string>
    <string name="slam_map_save_hint">请您为将要保存的地图命名，建议中文或者加数字</string>
</resources>
