<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="slamControlViewModel"
            type="com.nudtit.module_main.viewmodel.RosSlamControlViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/common_setting_title_view"
            android:titlemodel="@{slamControlViewModel.titleViewModel}"/>
        <Button
            android:id="@+id/bt_slam_control_goCharge"
            style="@style/slam_control_button_style"
            android:onClick="@{slamControlViewModel::onClick}"
            android:text="@string/slam_control_go_charge"/>
        <Button
            android:id="@+id/bt_slam_control_cancelAction"
            style="@style/slam_control_button_style"
            android:onClick="@{slamControlViewModel::onClick}"
            android:text="@string/slam_control_go_charge"/>
        <Button
            android:id="@+id/bt_slam_control_forward"
            style="@style/slam_control_button_style"
            android:onClick="@{slamControlViewModel::onClick}"
            android:text="@string/slam_control_forward"/>
        <Button
            android:id="@+id/bt_slam_control_back"
            style="@style/slam_control_button_style"
            android:onClick="@{slamControlViewModel::onClick}"
            android:text="@string/slam_control_back"/>
        <Button
            android:id="@+id/bt_slam_control_left"
            style="@style/slam_control_button_style"
            android:onClick="@{slamControlViewModel::onClick}"
            android:text="@string/slam_control_left"/>
        <Button
            android:id="@+id/bt_slam_control_right"
            style="@style/slam_control_button_style"
            android:onClick="@{slamControlViewModel::onClick}"
            android:text="@string/slam_control_right"/>


    </LinearLayout>
</layout>