<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="260dp"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_transport_gray_white_bg"
    android:orientation="vertical"
    android:paddingTop="10dp"
    android:paddingBottom="10dp">

    <TextView
        android:id="@+id/tv_map_operate_dialog_clear"
        style="@style/public_text_S_style"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@drawable/selector_gray_no_radius_bg"
        android:gravity="center"
        android:text="@string/main_map_operate_clear" />

    <TextView
        android:id="@+id/tv_map_operate_dialog_save"
        style="@style/public_text_S_style"
        android:layout_height="90dp"
        android:layout_width="match_parent"
        android:background="@drawable/selector_gray_no_radius_bg"
        android:gravity="center"
        android:text="@string/main_map_operate_save" />

    <TextView
        android:id="@+id/tv_map_operate_dialog_relocation"
        style="@style/public_text_S_style"
        android:layout_height="90dp"
        android:layout_width="match_parent"
        android:background="@drawable/selector_gray_no_radius_bg"
        android:gravity="center"
        android:text="@string/main_map_operate_relocation"/>

    <TextView
        android:id="@+id/tv_map_operate_dialog_mapEdit"
        style="@style/public_text_S_style"
        android:layout_height="90dp"
        android:layout_width="match_parent"
        android:background="@drawable/selector_gray_no_radius_bg"
        android:gravity="center"
        android:text="@string/map_edit_title" />
</LinearLayout>