<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="offlineLogin"
            type="com.nudtit.module_main.viewmodel.OfflineLoginViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingStart="60dp"
        android:paddingTop="60dp"
        android:paddingEnd="60dp"
        tools:context=".activity.MainActivity">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:background="@mipmap/ic_desktop_foreground" />

        <EditText
            android:id="@+id/et_offline_login_ip"
            style="@style/blue_stroke_edit_style"
            android:layout_marginTop="10dp"
            android:hint="@string/offline_login_input_ip"
            android:text="@={offlineLogin.obIp}" />

        <EditText
            android:id="@+id/et_offline_login_port"
            style="@style/blue_stroke_edit_style"
            android:layout_marginTop="30dp"
            android:hint="@string/offline_login_input_port"
            android:text="@={offlineLogin.obPort}" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_offline_login_connect"
            style="@style/public_text_S_style"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="90dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/selector_button_blue_45bg"
            android:onClick="@{()->offlineLogin.onClickLogin()}"
            android:text="@string/offline_login_connect" />

        <TextView
            android:id="@+id/tv_offline_login_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="right"
            android:text="@string/offline_login_hint"
            android:textSize="@dimen/dimen_XS" />
    </LinearLayout>
</layout>