<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="160dp"
    android:background="@color/gray_color"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingTop="15dp"
    android:paddingBottom="15dp">

    <ImageView
        android:id="@+id/iv_virtual_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="70dp"
        android:src="@drawable/ic_virtual_wall_cancel" />

    <TextView
        android:id="@+id/tv_virtual_wall_area_delete"
        style="@style/public_text_XS_style"
        android:layout_width="0dp"
        android:layout_weight="1.3"
        android:background="@drawable/selector_gray_no_radius_bg"
        android:drawableTop="@drawable/ic_virtual_wall_area_delete"
        android:layout_marginEnd="25dp"
        android:drawablePadding="15dp"
        android:maxLines="1"
        android:gravity="center"
        android:text="@string/main_virtual_wall_area_delete" />

    <TextView
        android:id="@+id/tv_virtual_wall_delete"
        style="@style/public_text_XS_style"
        android:layout_width="0dp"
        android:layout_weight="1.3"
        android:layout_marginEnd="25dp"
        android:background="@drawable/selector_gray_no_radius_bg"
        android:drawableTop="@drawable/ic_virtual_wall_delete"
        android:drawablePadding="15dp"
        android:gravity="center"
        android:text="@string/main_virtual_wall_delete" />

    <TextView
        android:id="@+id/tv_virtual_steep_wall"
        style="@style/public_text_XS_style"
        android:layout_width="0dp"
        android:layout_weight="1.3"
        android:layout_marginEnd="25dp"
        android:background="@drawable/selector_gray_no_radius_bg"
        android:drawableTop="@drawable/ic_virtual_wall_add"
        android:drawablePadding="15dp"
        android:gravity="center"
        android:text="@string/main_virtual_wall_steep" />

    <TextView
        android:id="@+id/tv_virtual_curve_wall"
        style="@style/public_text_XS_style"
        android:layout_width="0dp"
        android:layout_weight="1.3"
        android:background="@drawable/selector_gray_no_radius_bg"
        android:drawableTop="@drawable/ic_virtual_wall_add"
        android:drawablePadding="15dp"
        android:gravity="center"
        android:text="@string/main_virtual_wall_curve" />

    <ImageView
        android:id="@+id/iv_virtual_selected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="40dp"
        android:src="@drawable/ic_virtual_wall_selected" />
</LinearLayout>