<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="mapEditViewModel"
            type="com.nudtit.module_main.viewmodel.MapEditViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue_color"
            android:paddingTop="90dp"
            android:paddingBottom="15dp"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_map_edit_title_back"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_marginStart="35dp"
                android:background="@drawable/ic_left_back"
                android:onClick="@{mapEditViewModel.onClickListener}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/tv_map_edit_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:maxLines="1"
                android:text="@{mapEditViewModel.obTitle}"
                android:textColor="@color/white"
                android:textSize="@dimen/dimen_M"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/iv_map_edit_title_back"
                app:layout_constraintRight_toLeftOf="@id/iv_map_edit_upload"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_map_edit_upload"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_marginEnd="35dp"
                android:background="@drawable/ic_upload"
                android:onClick="@{mapEditViewModel.onClickListener}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toLeftOf="@id/iv_map_edit_save"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_map_edit_save"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_marginEnd="35dp"
                android:background="@drawable/ic_save"
                android:onClick="@{mapEditViewModel.onClickListener}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <com.nudtit.module_main.ruler.ScrollRulerLayout
            android:id="@+id/ruler_view"
            android:layout_width="400dp"
            android:layout_height="100dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent1"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/tv_map_edit_virtual_wall"
                style="@style/public_text_S_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_edit"
                android:gravity="center"
                android:onClick="@{mapEditViewModel.onClickListener}"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:text="@string/main_map_edit_virtual_wall" />

            <TextView
                android:id="@+id/tv_map_edit_virtual_track"
                style="@style/public_text_S_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_edit"
                android:gravity="center"
                android:onClick="@{mapEditViewModel.onClickListener}"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:text="@string/main_map_edit_virtual_tracks" />

            <TextView
                android:id="@+id/tv_map_edit_eraser"
                style="@style/public_text_S_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_eraser"
                android:gravity="center"
                android:onClick="@{mapEditViewModel.onClickListener}"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:text="@string/main_map_edit_rubber" />

            <TextView
                android:id="@+id/tv_map_edit_charging_pose"
                style="@style/public_text_S_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.2"
                android:drawableTop="@drawable/ic_robot_pose"
                android:gravity="center"
                android:onClick="@{mapEditViewModel.onClickListener}"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:text="@string/robot_info_charging_pose" />

            <TextView
                android:id="@+id/tv_map_edit_robot_pose"
                style="@style/public_text_S_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.2"
                android:drawableTop="@drawable/ic_robot_pose"
                android:gravity="center"
                android:onClick="@{mapEditViewModel.onClickListener}"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:text="@string/robot_info_robot_pose" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>